feat: 폴더 조회 API 구현 및 스웨거 작성 (#185)
