# src/routes/folder.route.js
@@ -4,6 +4,7 @@ import authenticate from "../middlewares/authenticate.middleware.js";
 
 const router = express.Router();
 
+router.get("/", authenticate, folderController.getFolder);
 router.post("/", authenticate, folderController.createFolder);
 router.patch("/:folderId", authenticate, folderController.updateFolder);
 router.delete("/:folderId", authenticate, folderController.deleteFolder);
